fixed review flex wrap issue

--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -300,6 +300,7 @@ justify-content: space-between;
 
 .reviews-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
 
@@ -316,14 +317,6 @@ justify-content: space-between;
 .star-review-header{
   font-size: 14px;
 }
-.post-your-review-button-modal {
-  width: 200px;
-  cursor: pointer;
-  box-shadow: #050303 2px 2px 0 0;
-  border: 2px solid black;
-  background-color: rgb(67, 66, 66);
-  color: white;
-}
 
 
 /* ------        each review        --------- */
@@ -333,6 +326,7 @@ justify-content: space-between;
   flex-direction: column;
   width: 40%;
   word-wrap: break-word;
+  margin-bottom: 20px;
 
 }
 
@@ -399,7 +393,7 @@ justify-content: space-between;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .score-bars-left{
   display: flex;
@@ -500,4 +494,24 @@ justify-content: space-between;
 
 .bar-pair:hover .glow {
   background: linear-gradient(to right, rgba(102, 0, 255, 0.297) 0%, rgb(140, 0, 255) 100%);
+}
+
+
+
+/* -------           Post a review       ---------- */
+
+.post-your-review-button-modal {
+  margin-top: 30px;
+  height: 40px;
+  width: 15%;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
+  transition: background-color 0.3s ease;
+}
+
+.post-your-review-button-modal:hover {
+  transform: scale(1.03);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
 }
